--- a/.github/workflows/live.yml
+++ b/.github/workflows/live.yml
@@ -14,6 +14,7 @@ env:
   AWS_SECRET_ACCESS_KEY: ${{ secrets.LIVE_AWS_SECRET_ACCESS_KEY }}
   AWS_REST_API_ID: ${{ secrets.LIVE_AWS_REST_API_ID }}
   AWS_REST_API_ROOT_RESOURCE_ID: ${{ secrets.LIVE_AWS_REST_API_ROOT_RESOURCE_ID }}
+  AWS_WEBSOCKET_API_ID: ${{ secrets.LIVE_AWS_WEBSOCKET_API_ID }}
   NODE_ENV: live
 
 jobs:
