test throw error

--- a/serverless.yml
+++ b/serverless.yml
@@ -67,7 +67,7 @@ functions:
 
   websocket-handler:
     role: arn:${env:AWS_PARTITION, ""}:iam::${env:AWS_ACCOUNT_ID, ""}:role/${self:service}-${opt:stage, "local"}
-    handler: src/websocket.asdf
+    handler: src/websocket.handler
     events:
       - websocket:
           route: $connect
