--- a/serverless.yml
+++ b/serverless.yml
@@ -71,8 +71,10 @@ functions:
     events:
       - websocket:
           route: $connect
+          routeResponseSelectionExpression: $default
       - websocket:
           route: $disconnect
+          routeResponseSelectionExpression: $default
       - websocket:
           route: $default
           routeResponseSelectionExpression: $default
