--- a/serverless.yml
+++ b/serverless.yml
@@ -65,19 +65,19 @@ functions:
           arn:
             Fn::GetAtt: [Table, StreamArn]
 
-  websocket-handler:
-    role: arn:${env:AWS_PARTITION, ""}:iam::${env:AWS_ACCOUNT_ID, ""}:role/${self:service}-${opt:stage, "local"}
-    handler: src/websocket.handler
-    events:
-      - websocket:
-          route: $connect
-          routeResponseSelectionExpression: $default
-      - websocket:
-          route: $disconnect
-          routeResponseSelectionExpression: $default
-      - websocket:
-          route: $default
-          routeResponseSelectionExpression: $default
+  # websocket-handler:
+  #   role: arn:${env:AWS_PARTITION, ""}:iam::${env:AWS_ACCOUNT_ID, ""}:role/${self:service}-${opt:stage, "local"}
+  #   handler: src/websocket.handler
+  #   events:
+  #     - websocket:
+  #         route: $connect
+  #         routeResponseSelectionExpression: $default
+  #     - websocket:
+  #         route: $disconnect
+  #         routeResponseSelectionExpression: $default
+  #     - websocket:
+  #         route: $default
+  #         routeResponseSelectionExpression: $default
 
 resources:
   Resources:
