--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@scaffoldly/openapi-generator": "^1.0.21",
+    "@scaffoldly/serverless-offline": "^8.3.1-0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
@@ -37,7 +38,6 @@
     "serverless-bundle": "^4.4.0",
     "serverless-dotenv-plugin": "^3.9.0",
     "serverless-dynamodb-local": "^0.2.40",
-    "serverless-offline": "^8.1.0",
     "serverless-offline-dynamodb-streams": "^5.0.0",
     "serverless-plugin-resource-tagging": "^1.1.1",
     "ts-node": "^9.1.1",
