--- a/serverless.yml
+++ b/serverless.yml
@@ -10,7 +10,7 @@ plugins:
   - serverless-bundle
   - serverless-dotenv-plugin
   - serverless-dynamodb-local
-  - serverless-offline-dynamodb-streams
+  # - serverless-offline-dynamodb-streams
   - serverless-plugin-resource-tagging
   - serverless-offline
 
